<resources>
    <string name="app_name">MeSure</string>
    <string name="subtitle">Placeholder</string>
    <string name="all">TODO</string>
    <string name="name">Placeholder</string>
    <string name="date">Placeholder</string>
    <string name="rating">4.4</string>
    <string name="description">Placeholder</string>

    <integer-array name="id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>

    <string-array name="name">
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
    </string-array>

    <string-array name="date">
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
    </string-array>

    <string-array name="rating">
        <item>4.4</item>
        <item>4.3</item>
        <item>4.8</item>
        <item>4.8</item>
        <item>4.4</item>
        <item>4.8</item>
    </string-array>

    <string-array name="description">
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
        <item>Placeholder</item>
    </string-array>

    <string-array name="url">
        <item>https://i.ibb.co/zQN0PyJ/happiness-bargain-clinic-bed-equipment-1.jpg</item>
        <item>https://i.ibb.co/cYwMy98/hands-of-unrecognizable-female-doctor-writing-on-form-and-typing-on-laptop-keyboard-1.jpg</item>
        <item>https://ae01.alicdn.com/kf/HTB1AD_jbffsK1RjSszbq6AqBXXaf/Skyrim-Dragonborn-SILK-POSTER-Decorative-Wall-painting-24x36inch.jpg</item>
        <item>https://img.elo7.com.br/product/zoom/279CDFA/big-poster-game-the-witcher-3-lo08-tamanho-90x60-cm-geek.jpg</item>
        <item>https://picfiles.alphacoders.com/198/thumb-198634.jpg</item>
        <item>https://pbs.twimg.com/media/E-3-vUGXMAEMriL.jpg</item>
    </string-array>
</resources>